# arcium-rescue-cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  bench_rescue.cpp
cmake/: CompilerWarnings.cmake  FindGMP.cmake  rescue-config.cmake.in
docs/: architecture.md
examples/: CMakeLists.txt  basic_usage.cpp
include/rescue/: constant_time.hpp  field.hpp  fp_impl.hpp  matrix.hpp  mds_precomputed.hpp  rescue.hpp  rescue_cipher.hpp  rescue_desc.hpp  rescue_hash.hpp  utils.hpp
include/rescue/detail/: fp_impl.hpp  mds_precomputed.hpp  uint256.hpp
interop-tests/: CMakeLists.txt  bench_rescue.js  benchmark_100k.js  chunk_benchmark_js.js  chunk_cpp_stats.json  chunk_data.json  chunk_data.json.stats.json  chunked_benchmark_results.json  compare_benchmarks.js  compare_results.js  debug_compare.cpp  debug_compare.js  debug_hash.cpp  generate_test_vectors.js  package.json  probe_js_params.js  run_100k_benchmark.sh  run_benchmarks.sh  run_chunked_benchmark.sh  run_tests.sh  test_chunk.json  test_chunk.json.stats.json  test_shake.js
interop-tests/cpp/: benchmark_100k.cpp  chunk_benchmark_cpp.cpp  test_interop.cpp  test_shake.cpp
interop-tests/js/: bench_rescue.js  benchmark_100k.js  compare_benchmarks.js  compare_results.js  generate_test_vectors.js  test_hash_simple.js
interop-tests/scripts/: run_100k_benchmark.sh  run_benchmarks.sh  run_chunked_benchmark.sh  run_tests.sh
src/: CMakeLists.txt  constant_time.cpp  field.cpp  matrix.cpp  rescue_cipher.cpp  rescue_desc.cpp  rescue_hash.cpp  uint256.cpp  utils.cpp
tests/: CMakeLists.txt  test_constant_time.cpp  test_field.cpp  test_matrix.cpp  test_rescue_cipher.cpp  test_rescue_hash.cpp  test_rescue_permutation.cpp
